Fixed minor style issue

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -37,7 +37,7 @@
             </div>
           </div>
         </li>
-        <li class='active'><a href='portfolio.html'><i class="material-icons" style='font-size: 50px'>home</i></a></li>
+        <li><a href='portfolio.html'><i class="material-icons" style='font-size: 50px'>home</i></a></li>
         <li><a id='liquidAssets' style='font-size: 30px' class='no-hover'></a></li>
         <li><a id='btnSignout' style='font-size: 30px'>Log Out</a></li>
       </ul>
